@@ -2,8 +2,9 @@ CC		= gcc
 TARGETS		?= netcfg-dhcp netcfg-static netcfg
 
 LDOPTS		= -ldebconfclient -ldebian-installer -liw
-CFLAGS		= -W -Wall
+CFLAGS		= -W -Wall -DNETCFG_VERSION=\"$(VERSION)\"
 COMMON_OBJS	= netcfg-common.o wireless.o
+VERSION		= $(shell dpkg-parsechangelog | grep ^Version: | cut -d' ' -f2)
 
 ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
 CFLAGS += -O0 -g3
